z-index fixed

--- a/src/canvas-slider.css
+++ b/src/canvas-slider.css
@@ -1,5 +1,6 @@
 .canvasSlideshow-container{
     position: relative;
+    z-index: 0;
 }
 
 .canvasSlideshow-slide{
